// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useIsScrolling renders as expected 1`] = `
<span>
  isScrolling: 
  false
</span>
`;

exports[`useIsScrolling when the window is scrolled and scrolling has finished renders as expected 1`] = `
<TestComponent>
  <span>
    isScrolling: 
    true
  </span>
</TestComponent>
`;

exports[`useIsScrolling when the window is scrolled renders as expected 1`] = `
<TestComponent>
  <span>
    isScrolling: 
    true
  </span>
</TestComponent>
`;
